@@ -485,21 +485,6 @@ in an annotation node.
 \end{stylekey}
 
 
-\subsection{Examples}
-
-The following pictures show examples of more complicated mindmaps that
-have been created using the mindmap library. Note that these mindmaps
-should be printed on A1 paper.
-
-\medskip
-\noindent
-\pgfimage[width=\textwidth]{pgfmanual-mindmap-1}
-
-\medskip
-\noindent
-\pgfimage[width=\textwidth]{pgfmanual-mindmap-2}
-
-
 
 %%% Local Variables: 
 %%% mode: latex
