@@ -93,7 +93,7 @@
   \null
   
   \thispagestyle{empty}
-  \vskip2cm
+  \vskip3cm
   \vfill
   \hfil
   \begin{tikzpicture}[overlay]
@@ -155,7 +155,7 @@
 \clearpage
 }
 
-%  \include{pgfmanual-en-library-shadows}
+%  \include{pgfmanual-en-library-automata}
 %\end{document}
 
 
