@@ -7,11 +7,11 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesFileRCS $Header: /cvsroot/pgf/pgf/generic/pgf/systemlayer/pgf.cfg,v 1.4 2007/03/20 09:34:00 tantau Exp $
+\ProvidesFileRCS $Header: /cvsroot/pgf/pgf/generic/pgf/systemlayer/pgf.cfg,v 1.5 2007/12/17 14:52:31 tantau Exp $
 
 % Default driver:
 \ifx\pgfsysdriver\@undefined
-  \def\pgfsysdriver{pgfsys-\Gin@driver}
+  \edef\pgfsysdriver{pgfsys-\Gin@driver}
 \fi
 
 
